# FastAPI_app

./: .copy_env  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 12ca7fe9832e_initial_revision.py
app/: config.py
app/alembic/: env.py
app/alembic/versions/: 2025_02_26_2008-7dbce9e76d42_user_and_post_models.py  2025_02_28_1505-22f9b2037c09_user_and_post_models.py  2025_02_28_2015-6a2ab9ec195d_user_and_post_models.py
app/dependencies/: db_session.py
app/models/: database.py  post.py  user.py
app/posts/: schemas.py
app/users/: auth.py  routers.py  schemas.py  services.py
models/: database.py  post.py  user.py
views/: hello.py  items.py
views/users/: crud.py  schemas.py  views.py
